# ColorPaletteGenerator

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  generator.cpp  main.cpp
source/headers/: generator.hpp
source/ui/: generator.ui
